# automatic-on-policy-self-distillation

./: .gitignore  LICENSE  Makefile  README.md  __init__.py  pyproject.toml  sync-to-slurm-gpu.sh
.devcontainer/: Dockerfile  devcontainer.json
src/: __init__.py  baseline.py  cli.py  config.py  run.py  self_distill.py  vllm.py
src/agent/: foundation_model.py  frontier.py  optimizer.py  student_model.py  vllm.py
src/data/: download_gsm8k_concise.py
src/eval/: __init__.py
src/providers/: __init__.py  base.py  tinker.py
