[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automatic-on-policy-self-distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "huggingface-hub>=0.34.0,<1.0",
    "litellm>=1.82.2",
    "tinker>=0.15.0",
    "tokenizers<0.23",
    "transformers==4.57.6",
    "typer>=0.24.1",
]

[project.scripts]
asd = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
