[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "automatic-on-policy-self-distillation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.34.0,<1.0",
    "litellm>=1.82.2",
    "lm-eval>=0.4.11",
    "ray>=2.54.0",
    "tinker>=0.15.0",
    "tokenizers<0.23",
    "transformers==4.57.6",
    "typer>=0.24.1",
]

[dependency-groups]
linux = [
    "torch>=2.10.0; sys_platform == 'linux'",
    "vllm; sys_platform == 'linux'",
]

[project.scripts]
asd = "src.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
